# ai-meterOps

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ai_meter_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: dependencies.py  routes.py  schemas.py
app/application/: use_cases.py
app/core/: config.py
app/domain/: errors.py  models.py  policies.py
app/infrastructure/: settings.py
app/infrastructure/ai/: mock_provider.py
app/infrastructure/db/: models.py  repositories.py  session.py
app/ports/: ai.py  repositories.py
docs/: c4.md  data-model.md  design.md
tests/: test_healthz.py  test_metering_service.py
